log
Thu 16 May 2024 01:31:50 AM UTC: 
 tests:  0|5
total_score: 0/70
97679de
Thu 16 May 2024 01:52:44 AM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   58 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
119aaaf
Thu 16 May 2024 01:54:34 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   64 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
fce3fa7
Thu 16 May 2024 01:54:52 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   65 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
67fe0d2
